# DOGE_funding_bot_OKX

./: .env.example  .gitignore  Dockerfile  GUIDE_RU.md  balance_improvements_summary.md  bug_fixes_summary.md  docker-compose.yml  import numpy as np.py  pyproject.toml  readme.md
opt/doge/: backup_state.sh
src/: borrow.py  monitors.py  rebalance.py  runner.py  utils.py
src/alerts/: telegram.py
src/core/: gateway.py
src/db/: state.py
src/executors/: perp.py  spot.py
